--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ nav a {
 h1 {
     color: darkblue;
 }
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -18,5 +18,26 @@ img {
     box-shadow: 0 0 30px gray;
 }
 p {
-    padding: 10px;
+    padding: 0;
+}
+main {
+    max-width: 500px;
+}
+aside {
+    width: 500px;
+    margin: 10px;
+    border: 1px solid grey;
+    padding: 2px;
+    background-color: black;
+    color: whitesmoke;
+    text-align: center;
+}
+aside img {
+    width: 200px;
+    height: auto;
+}
+footer {
+    margin-top: 15px;
+    border-top: 1px solid black;
+    text-align: center;
 }
