--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
 :root {
     --box-color: black;
     --box-text: whitesmoke;
@@ -23,6 +30,8 @@ main img {
     border: var(--border) solid var(--box-color);
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 p {
     padding: 0;
@@ -32,19 +41,40 @@ main {
 }
 aside {
     width: 500px;
-    margin: 10px;
-    border: var(--border) solid grey;
+    /* margin: 10px;
+    border: var(--border) solid grey; 
     padding: 2px;
     background-color: var(--box-color);
-    color: var(--box-text);
+    color: var(--box-text); */
     text-align: center;
+    position: relative;
 }
+
 aside img {
     width: 200px;
     height: auto;
 }
+
+aside h2 {
+    position: absolute;
+    left: 110px;
+}
+
 footer {
     margin-top: 15px;
     border-top: var(--border) solid var(--box-color);
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    border: var(--border) solid var(--box-color);
+    padding: 1rem;
+    background: var(--box-text);
+    color: var(var(--box-color));
+}
+
+.indent {
+    padding-left: 2rem;
 }
