--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,18 +12,31 @@
     --border: 1px;
 }
 
+header, .grid, footer {
+    max-width: 840;
+    margin: 0 auto;
+}
+
 nav {
     background-color: var(--flavor-color);
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 nav a {
     color: var(--box-text);
+    text-decoration: none;
     display: block;
-    padding: 20px;
+    padding: 1.2rem;
 }
+
 h1 {
     color: var(--flavor-color);
+    margin: 10px 0;
+    border-bottom: 2px solid;
 }
+
 main img {
     width: 150px;
     height: auto;
@@ -36,28 +49,33 @@ main img {
 p {
     padding: 0;
 }
-main {
-    max-width: 500px;
+
+.grid {
+    display: grid;
+    align-items: center;
 }
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
 aside {
-    width: 500px;
-    /* margin: 10px;
-    border: var(--border) solid grey; 
-    padding: 2px;
-    background-color: var(--box-color);
-    color: var(--box-text); */
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
     width: 200px;
     height: auto;
+
 }
 
 aside h2 {
     position: absolute;
-    left: 110px;
+    left: 310px;
 }
 
 footer {
