--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -13,6 +13,52 @@
     box-sizing: border-box;
 }
 
+header {
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    max-width: 1000px;
+}
+
+header img {
+    margin: 0 0.25rem 0 1rem;
+    width: 64px;
+    height: auto;
+}
+
+/* .navigation {
+    display: flex;
+    list-style: none;
+    justify-content: flex-end;
+} */
+
+.navigation {
+    justify-self: end;
+}
+.navigation ul {
+    display: flex;
+    list-style: none;
+}
+
+.navigation li {
+    flex: 1 1 auto;
+}
+
+.navigation a {
+    display: block;
+    color: navy;
+    padding: 20px;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.navigation a:hover {
+    color: tomato;
+    text-decoration: underline;
+}
+
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
@@ -71,4 +117,60 @@ h1 {
     float: right;
     width: 125px;
     margin-top: 20px
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+}
+
+.history h2 {
+    text-align: center;
+    grid-column: 1 / -1;
+}
+
+.history img {
+    justify-self: center;
+    width: 200px;
+    height: auto;
+}
+
+.history p {
+    text-align: justify;
+}
+
+.aay {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+}
+
+.aay h2 {
+    text-align: center;
+    grid-column: 1 / -1;
+}
+
+.aay img {
+    width: 160px;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+}
+
+footer p {
+    justify-self: start;
+}
+
+.socialmedia {
+    display: flex;
+    justify-self: end;
+}
+
+footer img {
+    width: 30px;
+    height: auto;
 }
