--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -100,8 +100,8 @@ nav, p, section, article {
     padding: 16px;
     text-align: center;
     opacity: 0.7;
-    background-color: var(--accent1-color);
-    color: var(--accent2-color);
+    background-color: var(--accent2-color);
+    color: var(--seconday-color);
 }
 
 .hero article {
@@ -111,6 +111,21 @@ nav, p, section, article {
     color: var(--accent2-color);
     margin: 10px;
     padding: 0px;
+}
+
+.hero button {
+    position: absolute;
+    bottom: 15%;
+    right: 220px;
+    width: 400px;
+    height: 70px;
+    font-size: 30px;
+    background-color: var(--accent2-color);
+}
+
+.hero button a {
+    text-decoration: none;
+    color: var(--primary-color)
 }
 
 .hero article img {
@@ -177,6 +192,45 @@ fieldset {
     
 }
 
+.signup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1, 1, 1;
+}
+
+.signup form {
+  display: flex;
+  /* flex-direction: column; */
+  align-items: flex-end;
+  gap: 20px;
+  width: 80%;
+}
+
+.signup fieldset {
+  border: none;
+  display: flex;
+  flex: 1;
+  gap: 20px; 
+  padding: 0;
+  margin: 0;              
+  /* justify-content: center; */
+}
+
+.signup fieldset div {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  /* align-items: flex-start; */
+}
+
+.signup button {
+  flex: 1;
+  height: 30px;
+  margin-top: 15px;
+  margin-bottom: 2px;
+}
+
 label {
     text-align: left;
     /* padding-right: 1rem; */
@@ -230,7 +284,7 @@ button:hover {
 
 .aay {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
 }
 
