--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -265,6 +265,53 @@ button:hover {
     background-color: lightblue;
 }
 
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(140 140 140);
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+}
+
+caption {
+    caption-side: bottom;
+    padding: 10px;
+    font-weight: 700;
+    font-style: italic;
+}
+
+thead,
+tfoot {
+    background-color: rgb(228 240 245);
+}
+
+thead th {
+    background-color: #000;
+    color: #fff;
+}
+
+th,
+td {
+    border: 1px solid rgb(160 160 160);
+    padding: 8px 10px;
+}
+
+td:last-of-type {
+    text-align: center;
+}
+
+tbody>tr:nth-of-type(even) {
+    background-color: rgb(237 238 242);
+}
+
+tfoot th {
+    text-align: right;
+}
+
+tfoot td {
+    font-weight: bold;
+}
+
 .history {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -305,6 +352,21 @@ button:hover {
     width: 160px;
     height: auto;
 }
+
+.but a {
+    bottom: 20%;
+    right: 220px;
+    width: 400px;
+    height: 90px;
+    font-size: 30px;
+    background-color: var(--seconday-color);
+    text-decoration: none;
+    color: var(--accent2-color);
+    text-align: center;
+    font-size: 40px;
+}
+
+
 
 footer {
     display: grid;
