--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -200,7 +200,7 @@ fieldset {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1, 1, 1;
+    /* width: 1, 1, 1; */
 }
 
 .signup form {
